Fix minor bug in start_sending_pills_reminder method

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,6 @@ src/data/media/pics/*
 src/data/media/videos/*
 
 # sensitive data
+config.ini
 src/data/bot.session
+src/data/telegram_config.yaml
